0.11.103
	+ Added .field_help class in public.css
	+ Add field help to modelView.mas
0.11.102
	+ Added `override_user_modification` configuration parameter to
	avoid user modification checkings and override them without asking
	+ Use the new EBox::Model::Row api
0.11.101
	+ Bugfix: Minor bugfix when checking uniqueness in Select type
	+ Added Japanese translation
0.11.100
	+ Add groups() to set groups eBox belongs to: ebox, adm, lp...
	+ Use eBox tmp directory to create std* files
	+ Fix an annoying warning found when interpoling undef values
	+ Fix an annoying warning found when interpoling undef values
0.11.99
	+ Fix rendering bug in hasMany viewer closing an open tag
	+ Added `EBox::ColourRange` to handle colour ranges
	+ Enhanced look&feel on model viewers
0.11
	+ New release
0.10.99
	+ New upstream release
0.10
	+ Changes on generic table: css, pager, icons
0.9.100
	+ Improvements on ajax table
	+ Add table page
	+ Add table filter
	+ Added generic ajax form
	+ Add SOAP session file
	+ Add EBox::Event class to support events in eBox
	+ Upgrade to PrototypeJS 1.5.1.1
0.9.99
	+ Enhanced HTML mason templates
0.9.3
	+ New release
0.9.2
	+ New upload method
0.9.1
	+ Add JS functions to show/hide elements
0.9
	+ Generic multitable with AJAX to handle 3D tables (used in
	  trafficshaping module)
	+ More mason components and better support for testing mason components
	+ Added Aragonese translation
	+ Added Dutch translation
	+ Added German translation
	+ Added Portuguese translation
0.8.1
	+ New release
0.8
	+ New release
0.7.99
	+ Add test stubs for ease testing
	+ Add setters for EBox::CGI::Base
	+ Add default _process with parameters validation behaviour to EBox::CGI::Base
	+ New sudo handling with custom exceptions
	+ Mason templates for common controls and form tables
	+ Some API extensions and bug-fixing
	+ Refactored and increased test coverture

0.7.1
	+ GUI improvements
	+ Change "save changes" button color when changes are
 	  unsaved
0.7